# ddash-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml
api/: config.py  logging.py  main.py
api/database/: dependencies.py  env.py  models.py  registry.py  repository.py  setup.py
api/database/versions/: 2024_09_22_1728-8b819cb9d821_add_projects_table.py  2024_09_22_1943-4990477aa5eb_add_users_table.py  2024_09_23_1739-55ab4e45ce64_add_creator_id_to_projects.py  2024_11_01_1625-7adba30c3d90_add_organizations_table.py  2024_11_01_1636-e08e500e6615_add_organization_memberships_table.py  2024_11_08_1705-cf1225b7e07e_add_organization_invitation_table.py  2024_11_09_0806-a208475536c2_add_organization_invitation_table.py  2024_11_11_1502-dc57498e96d2_add_users_table.py  2024_11_11_1503-993d5b38cf28_add_organization_related_tables.py  2024_11_11_1513-8ba8a2bfa1f8_add_projects_table.py  2024_11_12_2006-95671e68225d_add_project_partcipants_table.py  2024_11_15_1113-cdee3baa0980_add_tasks_table.py  (+3 more)
api/orgs/: dependencies.py  models.py  permissions.py  repository.py  routes.py  schemas.py  services.py
api/projects/: enums.py  models.py  permissions.py  repository.py  routes.py  schemas.py  services.py
api/tasks/: enums.py  models.py  permissions.py  routes.py  schemas.py  services.py
api/tests/: conftest.py
api/tests/test_routes/: conftest.py
api/users/: models.py  repository.py  routes.py  schemas.py  services.py
api/utils/: pagination.py  permissions.py
(+5 files in other folders)
