[project]
name = "ddash"
version = "0.1.0"
description = "API for DDash project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "asgi-correlation-id>=4.3.3",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "python-json-logger>=2.0.7",
    "sqlalchemy[postgresql-asyncpg]>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.6",
]
